--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "ws": "^8.18.2"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.8",
+    "@types/cors": "^2.8.18",
     "@types/express": "^5.0.1",
+    "@types/express-fileupload": "^1.5.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.1",
     "@types/ws": "^8.18.1",
