--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@types/express": "^5.0.1",
     "@types/express-fileupload": "^1.5.1",
     "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.13.1",
     "@types/ws": "^8.18.1",
     "ts-jest": "^29.3.2",
