--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "ws": "^8.18.2"
   },
   "devDependencies": {
+    "@types/cookie": "^0.6.0",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.1",
     "@types/express-fileupload": "^1.5.1",
+    "@types/express-ws": "^3.0.5",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
